--- a/gabes-fr.html
+++ b/gabes-fr.html
@@ -6,7 +6,7 @@
 <title>Gabès — Sensibilisation Environnementale</title>
 <header>
   <nav aria-label="Changer de langue" style="justify-content: center; padding: 0.3rem;">
-    <button class="lang-btn flag-btn" onclick="window.location.href='main.html'" aria-label="English">🇬🇧</button>
+    <button class="lang-btn flag-btn" onclick="window.location.href='index.html'" aria-label="English">🇬🇧</button>
     <button class="lang-btn flag-btn" onclick="window.location.href='gabes-ar.html'" aria-label="Arabic">🇹🇳</button>
   </nav>
 </header>
