--- a/gabes-ar.html
+++ b/gabes-ar.html
@@ -6,7 +6,7 @@
 <title>قابس — التوعية البيئية</title>
 <header>
   <nav aria-label="تبديل اللغة" style="justify-content: center; padding: 0.3rem;">
-    <button class="lang-btn flag-btn" onclick="window.location.href='main.html'" aria-label="English">🇬🇧</button>
+    <button class="lang-btn flag-btn" onclick="window.location.href='index.html'" aria-label="English">🇬🇧</button>
     <button class="lang-btn flag-btn" onclick="window.location.href='gabes-fr.html'" aria-label="French">🇫🇷</button>
   </nav>
 </header>
