--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no" />
 <title>Gabès — Environmental Awareness</title>
 <header>
   <nav aria-label="Language switch" style="justify-content: center; padding: 0.3rem;">
@@ -20,6 +20,17 @@
     --accent: #a66f2e;
     --hero-height: 100vh;
     --dark-bg: #1a1a1a;
+  }
+
+  /* Mobile viewport fixes */
+  html {
+    height: 100%;
+    overflow-x: hidden;
+  }
+  
+  body {
+    min-height: 100%;
+    overflow-x: hidden;
   }
 
   /* Basic reset */
@@ -138,10 +149,13 @@ body.pollution-theme header {
     background: rgba(255,255,255,0.2);
     border-color: rgba(255,255,255,0.5);
 }
-  /* Hero */
+  /* Hero - Fixed for mobile */
   .hero{
     position:relative;
-    height:var(--hero-height);
+    min-height: 100vh;
+    min-height: -webkit-fill-available;
+    height: 100vh;
+    height: -webkit-fill-available;
     width:100%;
     display:flex;
     align-items:flex-end;
@@ -157,6 +171,7 @@ body.pollution-theme header {
     background-image: url('pollution.png');
     background-size: cover;
     background-position: center center;
+    background-attachment: scroll; /* Fix for mobile */
     filter: contrast(.95) saturate(.9) grayscale(.04);
     z-index:0;
   }
@@ -176,7 +191,7 @@ body.pollution-theme header {
     z-index:10;
     width:100%;
     max-width:1100px;
-    padding:2.4rem;
+    padding:2.4rem 2.4rem 4rem; /* Extra bottom padding for mobile */
     color:white;
     display:flex;
     align-items:center;
@@ -200,7 +215,7 @@ body.pollution-theme header {
 
   .controls{display:flex;gap:.6rem;align-items:center}
 
-  /* Arrow button */
+  /* Arrow button - Fixed position */
   .arrow-btn{
     width:56px;
     height:56px;
@@ -212,6 +227,8 @@ body.pollution-theme header {
     cursor:pointer;
     backdrop-filter: blur(6px);
     transition: all 0.4s ease;
+    position: relative;
+    z-index: 20;
   }
 
   .arrow-btn:hover {
@@ -431,7 +448,7 @@ body.pollution-theme header {
     .hero-inner{
       flex-direction:column;
       align-items:flex-start;
-      padding:1.4rem;
+      padding:1.4rem 1.4rem 3rem;
     }
     .hero-left{max-width:100%}
     .metrics{flex-wrap:wrap; justify-content: center;}
@@ -441,10 +458,34 @@ body.pollution-theme header {
   }
 
   @media (max-width: 600px) {
-    .hero-inner{padding:1rem;}
-    .stats{padding:0.8rem;}
-    .metric{min-width: 100px; padding: 0.6rem 0.8rem;}
+    .hero-inner{padding:1rem 1rem 2.5rem;}
+    .stats{
+      padding:0.8rem;
+      width: 100%;
+      margin-top: 1rem;
+    }
+    .metrics{
+      justify-content: space-between;
+      width: 100%;
+    }
+    .metric{
+      min-width: calc(50% - 0.5rem);
+      padding: 0.6rem 0.8rem;
+      margin-bottom: 0.5rem;
+    }
     .metric .value{font-size: 1rem;}
+  }
+
+  @media (max-width: 400px) {
+    .metric {
+      min-width: 100%;
+    }
+    .title {
+      font-size: 1.6rem;
+    }
+    .subtitle {
+      font-size: 1rem;
+    }
   }
 </style>
 </head>
